tdf#77431: Move setting sheet visibility to finalize phase

and thus fix xlsx-specific issue that 1st sheet can't be hidden.
Also kill some UNO in the process.

I'm not sure if guarding against all sheets being hidden (by having
at least active sheet visible) is absolutely necessary, but better
be safe than sorry.

Change-Id: I4ad21d223b2effe427ab1d5411c035886f6cc71c